--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
       - run:
           name: Deploy
           command: |
-            APPS_MODIFIED=$(git diff origin/master origin/$CIRCLE_BRANCH --name-only apps/ | awk '{ split($1,a,"/"); if (length(a[2]) != 0) { print a[2]} } ' | sort -u)
+            APPS_MODIFIED=$(git diff origin/master origin/$CIRCLE_BRANCH --dirstat=files,1 apps/ | awk '{ split($2,a,"/"); if (length(a[2]) != 0) { print a[2]} } ' | sort -u)
             if [ -z "$APPS_MODIFIED" ]
             then
                   echo "No app change detected. Skipping the deploy.."
