--- a/.github/workflows/upload-assets.yml
+++ b/.github/workflows/upload-assets.yml
@@ -1,8 +1,8 @@
 on:
   push:
     # Sequence of patterns matched against refs/tags
-    branch:
-    - 'master'
+    tags:
+    - 'v*'
 
 name: Upload Release Asset
 
