--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           WITH_V: true
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
-          zip --junk-paths my-artifact apps/dash-3d-image-partitioning/
+          zip --junk-paths my-artifact apps/dash-3d-image-partitioning/*
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
