--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+# https://github.com/actions/upload-release-asset/issues/28#issuecomment-617208601
 on:
   push:
     branches:
@@ -19,9 +20,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
-      - name: Build project # This would actually build your project, using zip for an example artifact
+      - name: Zip apps
         run: |
-          zip --junk-paths my-artifact apps/dash-3d-image-partitioning/*
+          cd ./apps;
+          for f in */; do
+            echo "Zipping ${f}...";
+            zip -qr "${f%/*}" "${f}"*;
+          done
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -32,13 +37,14 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
-      - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
+      - name: Upload assets
+        run: |
+          set -x
+          assets=()
+          for asset in ./*.md; do
+            assets+=("-a" "$asset")
+          done
+          tag_name="${GITHUB_REF##*/}"
+          hub release create "${assets[@]}" -m "$tag_name" "$tag_name"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./my-artifact.zip
-          asset_name: my-artifact.zip
-          asset_content_type: application/zip
