--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,24 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: '0'
       - name: Bump version and push tag
+        id: version_bump
         uses: anothrNick/github-tag-action@1.34.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ version_bump.outputs.new_tag }}
+          release_name: Release ${{ version_bump.outputs.new_tag }}
+          draft: false
+          prerelease: false
 #       - name: Zip apps
 #         run: |
 #           cd ./apps;
@@ -25,16 +38,6 @@ jobs:
 #             echo "Zipping ${f}...";
 #             zip -qr "${f%/*}" "${f}"*;
 #           done
-#       - name: Create Release
-#         id: create_release
-#         uses: actions/create-release@v1
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#         with:
-#           tag_name: ${{ github.ref }}
-#           release_name: Release ${{ github.ref }}
-#           draft: false
-#           prerelease: false
 #       - name: Upload assets
 #         run: |
 #           set -x
