--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,16 +21,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.version_bump.outputs.new_tag }}
-          release_name: Release ${{ steps.version_bump.outputs.new_tag }}
-          draft: false
-          prerelease: false
+#       - name: Create Release
+#         id: create_release
+#         uses: actions/create-release@v1
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         with:
+#           tag_name: ${{ steps.version_bump.outputs.new_tag }}
+#           release_name: Release ${{ steps.version_bump.outputs.new_tag }}
+#           draft: false
+#           prerelease: false
       - name: Compress apps
         run: |
           cd ./apps;
@@ -39,7 +39,7 @@ jobs:
             zip -qr "${f%/*}" "${f}"*;
           done
           cd -;
-      - name: Upload zipped apps to release
+      - name: Create release and upload zipped apps
         run: |
           cd ./apps;
           set -x
@@ -48,7 +48,7 @@ jobs:
             assets+=("-a" "$asset")
           done
           tag_name="${GITHUB_REF}"
-          hub release create "${assets[@]}" -m "$tag_name" "$tag_name"
+          hub release create "${assets[@]}" -m "Release ${tag_name}" "$tag_name"
           cd -;
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
