--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,9 +47,8 @@ jobs:
           for asset in ./*.zip; do
             assets+=("-a" "$asset")
           done
-          tag_name="${GITHUB_REF}"
-          hub release create "${assets[@]}" -m "Release ${tag_name}" "$tag_name"
+          hub release create "${assets[@]}" -m "Release ${RELEASE_TAG}" "$RELEASE_TAG"
           cd -;
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REF: ${{ steps.version_bump.outputs.new_tag }}
+          RELEASE_TAG: ${{ steps.version_bump.outputs.new_tag }}
