--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,12 +15,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: '0'
-      - name: Bump version and push tag
-        id: version_bump
-        uses: anothrNick/github-tag-action@1.34.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          WITH_V: true
+#       - name: Bump version and push tag
+#         id: version_bump
+#         uses: anothrNick/github-tag-action@1.34.0
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#           WITH_V: true
 #       - name: Create Release
 #         id: create_release
 #         uses: actions/create-release@v1
@@ -47,8 +47,7 @@ jobs:
           for asset in ./*.zip; do
             assets+=("-a" "$asset")
           done
-          hub release create "${assets[@]}" -m "Release ${RELEASE_TAG}" "${RELEASE_TAG}"
+          hub release edit "${assets[@]}" -m "Compressed Apps" "apps"
           cd -;
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          RELEASE_TAG: ${{ steps.version_bump.outputs.new_tag }}
